--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="LMSTEST">
+    <wb-module deploy-name="welcomehello">
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
-        <property name="java-output-path" value="/LMSTEST/build/classes"/>
+        <property name="java-output-path" value="/welcomehello/build/classes"/>
         <property name="context-root" value="/welcomehello"/>
     </wb-module>
 </project-modules>
