--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/.apt_generated"/>
         <property name="java-output-path" value="/LMSTEST/build/classes"/>
-        <property name="context-root" value="/"/>
+        <property name="context-root" value="/welcomehello"/>
     </wb-module>
 </project-modules>
